--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Project</string>
+    <string name="NameDateOfInspection">Inspection Date: </string>
+    <string name="DateOfInspection">22-Jan-2020</string>
+    <string name="NameInspType">Inspection Type:</string>
+    <string name="InspType">Routine</string>
+    <string name="NameNumCritical">Number of Critical Issues Found:</string>
+    <string name="NumCritical">2</string>
+    <string name="NameNumNonCritical">Number of Non-Critical Issues Found:</string>
+    <string name="NumNonCritical">3</string>
+    <string name="NameHazard">Hazard Level:</string>
+    <string name="Hazard">Moderate</string>
 </resources>
