--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="NumNonCritical">3</string>
     <string name="NameHazard">Hazard Level:</string>
     <string name="Hazard">Moderate</string>
+    <string name="name">Name</string>
 </resources>
