--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -10,4 +10,40 @@
     <string name="NumNonCritical">3</string>
     <string name="NameHazard">Hazard Level:</string>
     <string name="Hazard">Moderate</string>
+    <string name="violation101">Building not in accordance with the Regulation.</string>
+    <string name="violation102">Operation of an unapproved food premises.</string>
+    <string name="violation103">Failure to hold a valid permit.</string>
+    <string name="violation104">Permit not posted in a conspicuous location.</string>
+    <string name="violation201">Food contaminated or unfit for human consumption.</string>
+    <string name="violation202">Food not processed in a safe way.</string>
+    <string name="violation203">Food not cooled in an acceptable manner.</string>
+    <string name="violation204">Food not cooked or reheated in a safe way.</string>
+    <string name="violation205">Cold potentially hazardous food stored above 4 °C.</string>
+    <string name="violation206">Hot potentially hazardous food stored below 60 °C.</string>
+    <string name="violation208">Foods obtained from unapproved sources.</string>
+    <string name="violation209">Food not protected from contamination.</string>
+    <string name="violation210">Food not thawed in an acceptable manner.</string>
+    <string name="violation211">Frozen potentially food stored above -18 °C.</string>
+    <string name="violation212">Operator has not provided acceptable food handling.</string>
+    <string name="violation301">The surfaces not maintained in sanitary condition.</string>
+    <string name="violation302">The surfaces not properly washed and sanitized.</string>
+    <string name="violation303">The sanitary maintenance not adequate.</string>
+    <string name="violation304">Premises not free of pests.</string>
+    <string name="violation305">May allow entrance/harbouring/breeding of pests.</string>
+    <string name="violation306">Food premises not maintained in a sanitary condition.</string>
+    <string name="violation307">The surfaces are not of suitable design/material.</string>
+    <string name="violation308">The surfaces are not in good working order.</string>
+    <string name="violation309">Chemicals cleansers stored or labeled improperly.</string>
+    <string name="violation310">Single use containers are used more than once.</string>
+    <string name="violation311">Premises not maintained as per approved plans.</string>
+    <string name="violation312">Unwanted items are stored at food premises.</string>
+    <string name="violation313">Live animal on the premises.</string>
+    <string name="violation314">Operator has not provided acceptable procedures.</string>
+    <string name="violation315">Equipments lack accurate thermometers.</string>
+    <string name="violation401">No enough handwashing stations for employees.</string>
+    <string name="violation402">Employee does not wash hands properly or at adequate frequency.</string>
+    <string name="violation403">Employee lacks good personal hygiene clean clothing and hair control.</string>
+    <string name="violation404">Employee smoking in food preparation/processing/storage areas.</string>
+    <string name="violation501">Operator does not have FOODSAFE Level 1 or Equivalent.</string>
+    <string name="violation502">In operator’s absence no staff on duty has FOODSAFE Level 1 or equivalent.</string>
 </resources>
