--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="InspectionTitle">Inspection</string>
     <string name="food_premises_not_maintained_in_a_sanitary_condition">Food premises not maintained in a sanitary condition.</string>
     <string name="not_critical">Not Critical</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="map">Map</string>
 
 
 </resources>
