--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="update_popup">Update</string>
     <string name="ignore_popup">Ignore</string>
     <string name="update_available">Update Available</string>
+    <string name="image_download">image download</string>
 
 
 </resources>
