--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
 
     <string name="title_activity_maps">Map</string>
     <string name="map">Map</string>
+    <string name="cancel">Cancel</string>
 
 
 </resources>
