--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="map">Map</string>
     <string name="cancel">Cancel</string>
+    <string name="downloadFailed">Failed to download</string>
 
 
 </resources>
