Fix all back buttons and change layout

--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <string name="downloadFailed">Failed to download</string>
 
     <string name="title_activity_maps2">Map</string>
-    <string name="restaurant">Restaurant</string>
+    <string name="restaurant">Restaurants</string>
 
 
 </resources>
