Added check new inspection for fav restaurant function

--- a/Final_project/app/src/main/res/values/strings.xml
+++ b/Final_project/app/src/main/res/values/strings.xml
@@ -94,12 +94,7 @@
     <string name="unKnown_Main">Unknown</string>
     <string name="noInspection_Main">No Inspections</string>
     <string name="noIssues_Main">0 issues found</string>
-
-
-
-
-
-
+    <string name="restaurant_name">Restaurant Name</string>
 
 
 </resources>
